# zorglangue-traductor

./: Eviv_Bulgroz.py  LICENSE  README.md  main.py  pyproject.toml  test.py
src/zorglangue_traductor/: __init__.py  main.py
src/zorglangue_traductor/utils/: lower_upper.py  shift.py
